--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>DualPipe: Minute-Long Videos with Dual Parallelism</title>
+  <title>DualParal: Minute-Long Videos with Dual Parallelisms</title>
   <link rel="icon" type="image/png" href="static/images/icon.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -53,7 +53,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">DualPipe: Minute-Long Videos with Dual Parallelism</h1>
+            <h1 class="title is-1 publication-title">DualParal: Minute-Long Videos with Dual Parallelism</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <!-- 修正标签错误，使用 span 标签并正确嵌套 -->
@@ -160,7 +160,7 @@
             <video src="static/videos/comparision/FIFO/A person wearing a dark blue shirt is gently petting a tabby ca.mp4" autoplay controls muted loop></video>
           </div>
           <div class="method-video">
-            <h3 class="method-title">DualPipe</h3>
+            <h3 class="method-title">DualParal</h3>
             <video src="static/videos/comparision/DualPipe/A person wearing a dark blue shirt is gently petting a tabby ca.mp4" autoplay controls muted loop></video>
           </div>
         </div>
@@ -185,7 +185,7 @@
             <video src="static/videos/comparision/FIFO/A young man, with soft features and an expression of serene astonishment, is s.mp4" autoplay controls muted loop></video>
           </div>
           <div class="method-video">
-            <h3 class="method-title">DualPipe</h3>
+            <h3 class="method-title">DualParal</h3>
             <video src="static/videos/comparision/DualPipe/A young man, with soft fe.mp4" autoplay controls muted loop></video>
           </div>
         </div>
