--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">DualParal: Minute-Long Videos with Dual Parallelism</h1>
+            <h1 class="title is-1 publication-title">DualParal: Minute-Long Videos with Dual Parallelisms</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <!-- 修正标签错误，使用 span 标签并正确嵌套 -->
