--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>DualParal: Minute-Long Videos with Dual Parallelisms</title>
+  <title>Minute-Long Videos with Dual Parallelisms</title>
   <link rel="icon" type="image/png" href="static/images/icon.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -53,12 +53,24 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">DualParal: Minute-Long Videos with Dual Parallelisms</h1>
+            <h1 class="title is-1 publication-title">Minute-Long Videos with Dual Parallelisms</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <!-- 修正标签错误，使用 span 标签并正确嵌套 -->
               <span class="author-block">Anonymous Author(s)</span>
             </div>
+            
+            <!-- Github link -->
+            <span class="link-block">
+              <a href="https://anonymous.4open.science/r/DualParal_for_NeurIPS2025-C0E6/" target="_blank"
+              class="external-link button is-normal is-rounded is-dark">
+              <span class="icon">
+                <i class="fab fa-github"></i>
+              </span>
+              <span>Code</span>
+            </a>
+          </span>
+            
           </div>
         </div>
       </div>
