--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <span class="icon">
                 <i class="fab fa-github"></i>
               </span>
-              <span>Code</span>
+              <span>Anonymous Code</span>
             </a>
           </span>
             
@@ -272,7 +272,7 @@
             <video poster="" id="video1" autoplay controls muted loop height="100%">
               <source src="static/videos/16s/2.mp4" type="video/mp4">
             </video>
-            <button class="bottom-prompt-button" data-prompt="Film quality, professional quality, rich in details. The video begins to show the surface of a pond, and the camera gradually zooms in to a close-up. The water surface began to bubble, and then a handsome boy in a coat emerged from the lotus pond, soaked through, with a subtle change in the expression on his face.">
+            <button class="bottom-prompt-button" data-prompt="Film quality, professional quality, rich details. The video begins to show the surface of a pond, and the camera slowly zooms in to a close-up. The water surface begins to bubble, and then a blonde woman is seen coming out of the lotus pond soaked all over, showing the subtle changes in her facial expression, creating a dreamy atmosphere.">
               View Prompt
             </button>
           </div>
