Update authors and BibTeX citation in index.html

--- a/index.html
+++ b/index.html
@@ -57,17 +57,46 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <!-- 修正标签错误，使用 span 标签并正确嵌套 -->
-              <span class="author-block">Anonymous Author(s)</span>
+              <span class="author-block">
+                Zeqing Wang</a><sup>12</sup>,</span>
+                <span class="author-block">
+                Bowen Zheng</a><sup>13</sup>,</span>
+                <span class="author-block">
+                Xingyi Yang</a><sup>1</sup>,</span>
+                <span class="author-block">
+                Yuecong Xu</a><sup>1</sup>,</span>
+                <span class="author-block">
+                Xinchao Wang</a><sup>*1</sup></span>
+                  </span>
             </div>
+
+                  <div class="is-size-5 publication-authors">
+                    <span class="author-block"></a><sup>1</sup>National University of Singapore,</span><br>
+                    <span class="author-block"></span></a><sup>2</sup>Xidian University, </a><sup>3</sup>Huazhong University of Science and Technology</span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Author</small></span>
+                  </div>
+
+                  <div class="column has-text-centered">
+                    <div class="publication-links">
+                         <!-- Arxiv PDF link -->
+                      <span class="link-block">
+                        <a href="https://arxiv.org/abs/2505.21070" target="_blank"
+                        class="external-link button is-normal is-rounded is-dark">
+                        <span class="icon">
+                          <i class="fas fa-file-pdf"></i>
+                        </span>
+                        <span>Paper</span>
+                      </a>
+                    </span>
             
             <!-- Github link -->
             <span class="link-block">
-              <a href="https://anonymous.4open.science/r/DualParal_for_AAAI2026-476A/" target="_blank"
+              <a href="https://github.com/DualParal-Project/DualParal" target="_blank"
               class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <i class="fab fa-github"></i>
               </span>
-              <span>Anonymous Code</span>
+              <span>Code</span>
             </a>
           </span>
             
@@ -542,12 +571,20 @@
 
 
 <!--BibTex citation -->
-<!--  <section class="section" id="BibTeX">
+  <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@misc{wang2025minutelongvideosdualparallelisms,
+        title={Minute-Long Videos with Dual Parallelisms}, 
+        author={Zeqing Wang and Bowen Zheng and Xingyi Yang and Yuecong Xu and Xinchao Wang},
+        year={2025},
+        eprint={2505.21070},
+        archivePrefix={arXiv},
+        primaryClass={cs.CV},
+        url={https://arxiv.org/abs/2505.21070}, 
+  }</code></pre>
     </div>
-</section> -->
+</section>
 <!--End BibTex citation -->
 
 
