--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
               <!-- Paper authors -->
               <!-- 修正标签错误，使用 span 标签并正确嵌套 -->
               <span class="author-block">
-                Zeqing Wang</a><sup>12</sup>,</span>
+                Zeqing Wang</a><sup>1</sup>,</span>
                 <span class="author-block">
-                Bowen Zheng</a><sup>13</sup>,</span>
+                Bowen Zheng</a><sup>1</sup>,</span>
                 <span class="author-block">
-                Xingyi Yang</a><sup>1</sup>,</span>
+                Xingyi Yang</a><sup>2</sup>,</span>
+                <span class="author-block">
+                Zhenxiong Tan</a><sup>1</sup>,</span>
                 <span class="author-block">
                 Yuecong Xu</a><sup>1</sup>,</span>
                 <span class="author-block">
@@ -71,8 +73,7 @@
             </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"></a><sup>1</sup>National University of Singapore,</span><br>
-                    <span class="author-block"></span></a><sup>2</sup>Xidian University, </a><sup>3</sup>Huazhong University of Science and Technology</span>
+                    <span class="author-block"></span></a><sup>1</sup>Xidian University, </a><sup>2</sup>The Hong Kong Polytechnic University</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Author</small></span>
                   </div>
 
