--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block"></span></a><sup>1</sup>Xidian University, </a><sup>2</sup>The Hong Kong Polytechnic University</span>
+                    <span class="author-block"></span></a><sup>1</sup>National University of Singapore, </a><sup>2</sup>The Hong Kong Polytechnic University</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Author</small></span>
                   </div>
 
